<resources>
	<string name="app_name">Weather</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="location_image">location_image</string>
	<string name="temperature">Temperature</string>
	<string name="today">Today</string>
	<string name="forecast_report">Forecast Report</string>
	<string name="visibility">Visibility</string>
	<string name="cloud">Cloud</string>
	<string name="pressure">Pressure</string>
	<string name="wind">Wind</string>
	<string name="humidity">Humidity</string>
	<string name="wind_direction">Wind direction</string>
	<string name="search_new_place">Search</string>
	<string name="not_found">Not found !!</string>
	<string name="chance_of_snow">Snow</string>
	<string name="chance_of_rain">Rain</string>
	<string name="sunrise">Sunrise</string>
	<string name="sunset">Sunset</string>
	<string name="uv">UV</string>
	<string name="next_3_days">Next 3 days</string>
	<string name="search_for_city">Search for city</string>
</resources>