<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="8dp"
	tools:context=".ui.fragments.forecast.ForecastFragment">
	
	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			
			<!--  action bar	-->
			<RelativeLayout
				android:id="@+id/forecast_action_bar_layout"
				android:layout_width="match_parent"
				android:layout_height="?actionBarSize"
				android:background="@drawable/toolbar_shape"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">
				
				
				<ImageView
					android:id="@+id/forecast_back_btn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentStart="true"
					android:layout_centerVertical="true"
					android:layout_marginStart="12dp"
					android:scaleType="centerCrop"
					android:src="@drawable/baseline_arrow_back_ios_24"
					app:tint="?colorOnPrimary" />
				
				<TextView
					android:id="@+id/forecast_action_bar_title"
					style="@style/simple_text_style"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:text="@string/forecast_report"
					android:textColor="?colorOnPrimary" />
			
			
			</RelativeLayout>
			
			<!--  Main layout	-->
			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/main_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@id/forecast_action_bar_layout">
				
				<!--  forecast rec	-->
				<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/forecast_rec"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:padding="8dp"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:listitem="@layout/item_weather_forecast" />
				
				<!--  forecast day info 	-->
				<androidx.cardview.widget.CardView
					android:id="@+id/forecast_info_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="12dp"
					app:cardBackgroundColor="?colorSecondary"
					app:cardCornerRadius="8dp"
					app:cardElevation="4dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/forecast_rec">
					
					
					<androidx.constraintlayout.widget.ConstraintLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="4dp">
						
						<ImageView
							android:id="@+id/weather_image"
							android:layout_width="120dp"
							android:layout_height="120dp"
							android:layout_marginStart="20dp"
							android:elevation="10dp"
							android:src="@drawable/sunny_day"
							app:layout_constraintStart_toStartOf="parent"
							app:layout_constraintTop_toTopOf="parent" />
						
						<TextView
							android:id="@+id/weather_situation_txt"
							style="@style/simple_text_style"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textSize="16sp"
							app:layout_constraintEnd_toEndOf="@id/weather_image"
							app:layout_constraintStart_toStartOf="@id/weather_image"
							app:layout_constraintTop_toBottomOf="@id/weather_image"
							tools:text="Sunny" />
						
						
						<!--	 temperature layout		-->
						<androidx.constraintlayout.widget.ConstraintLayout
							android:id="@+id/current_temp_layout"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginEnd="20dp"
							app:layout_constraintBottom_toBottomOf="@id/weather_image"
							app:layout_constraintEnd_toEndOf="parent"
							app:layout_constraintTop_toTopOf="@id/weather_image">
							
							<TextView
								android:id="@+id/current_temp_cel_txt"
								style="@style/simple_text_style"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textSize="60sp"
								app:layout_constraintBottom_toBottomOf="parent"
								app:layout_constraintEnd_toEndOf="parent"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent"
								tools:text="24" />
							
							<TextView
								android:id="@+id/current_temp_far_txt"
								style="@style/simple_text_style"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textSize="16sp"
								app:layout_constraintBottom_toBottomOf="parent"
								app:layout_constraintEnd_toEndOf="parent"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toBottomOf="@id/current_temp_cel_txt"
								tools:text="feels like 60f" />
							
							<ImageView
								android:id="@+id/temp_image"
								android:layout_width="15dp"
								android:layout_height="15dp"
								android:src="@drawable/outline_circle_24"
								app:layout_constraintStart_toEndOf="@id/current_temp_cel_txt"
								app:layout_constraintTop_toTopOf="@id/current_temp_cel_txt"
								app:tint="?colorOnPrimary" />
						
						
						</androidx.constraintlayout.widget.ConstraintLayout>
						
						<!--	weather info layout		-->
						<LinearLayout
							android:id="@+id/weather_info_layout"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="8dp"
							android:gravity="center"
							android:orientation="vertical"
							android:weightSum="2"
							app:layout_constraintEnd_toEndOf="parent"
							app:layout_constraintStart_toStartOf="parent"
							app:layout_constraintTop_toBottomOf="@id/weather_situation_txt">
							
							
							<LinearLayout
								android:layout_width="match_parent"
								android:layout_height="0dp"
								android:layout_marginTop="8dp"
								android:layout_weight="1"
								android:gravity="center"
								android:orientation="horizontal"
								android:padding="8dp"
								android:weightSum="3">
								
								<LinearLayout
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="1"
									android:gravity="center"
									android:orientation="vertical"
									android:weightSum="3"
									app:tint="?colorOnPrimary">
									
									<ImageView
										android:id="@+id/wind_speed_image"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:src="@drawable/wind"
										app:tint="?colorOnPrimary" />
									
									
									<TextView
										android:id="@+id/wind_speed_txt"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:textSize="18sp"
										tools:text="12Km/h" />
									
									<TextView
										android:id="@+id/wind_speed_title"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:text="@string/wind"
										android:textSize="14sp" />
								
								
								</LinearLayout>
								
								<LinearLayout
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="1"
									android:gravity="center"
									android:orientation="vertical"
									android:weightSum="3"
									app:tint="?colorOnPrimary">
									
									
									<ImageView
										android:id="@+id/humidity_image"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:src="@drawable/humidity"
										app:tint="?colorOnPrimary" />
									
									<TextView
										android:id="@+id/humidity_txt"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:textSize="18sp"
										tools:text="90%" />
									
									<TextView
										android:id="@+id/humidity_title"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:text="@string/humidity"
										android:textSize="14sp" />
								
								
								</LinearLayout>
								
								<LinearLayout
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="1"
									android:gravity="center"
									android:orientation="vertical"
									android:weightSum="3">
									
									<ImageView
										android:id="@+id/snow_chance_image"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:src="@drawable/snow_icon"
										app:tint="?colorOnPrimary" />
									
									
									<TextView
										android:id="@+id/snow_chance_txt"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:textSize="18sp"
										tools:text="NW" />
									
									<TextView
										android:id="@+id/snow_chance_title"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:text="@string/chance_of_snow"
										android:textSize="14sp" />
								
								
								</LinearLayout>
							
							
							</LinearLayout>
							
							
							<LinearLayout
								android:layout_width="match_parent"
								android:layout_height="0dp"
								android:layout_marginTop="8dp"
								android:layout_weight="1"
								android:gravity="center"
								android:orientation="horizontal"
								android:padding="8dp"
								android:weightSum="3">
								
								<LinearLayout
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="1"
									android:gravity="center"
									android:orientation="vertical"
									android:weightSum="3">
									
									<ImageView
										android:id="@+id/uv_image"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:src="@drawable/sun"
										app:tint="?colorOnPrimary" />
									
									
									<TextView
										android:id="@+id/uv_txt"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:textSize="18sp"
										tools:text="1000 mBar" />
									
									<TextView
										android:id="@+id/uv_title"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:text="@string/uv"
										android:textSize="14sp" />
								
								
								</LinearLayout>
								
								<LinearLayout
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="1"
									android:gravity="center"
									android:orientation="vertical"
									android:weightSum="3">
									
									<ImageView
										android:id="@+id/rain_chance_image"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:src="@drawable/rain_icon"
										app:tint="?colorOnPrimary" />
									
									
									<TextView
										android:id="@+id/rain_chance_txt"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:textSize="18sp"
										tools:text="75" />
									
									<TextView
										android:id="@+id/rain_chance_title"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:text="@string/chance_of_rain"
										android:textSize="14sp" />
								
								
								</LinearLayout>
								
								<LinearLayout
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="1"
									android:gravity="center"
									android:orientation="vertical"
									android:weightSum="3">
									
									<ImageView
										android:id="@+id/visibility_image"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:src="@drawable/visibility"
										app:tint="?colorOnPrimary" />
									
									
									<TextView
										android:id="@+id/visibility_txt"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:textSize="18sp"
										tools:text="4 Km" />
									
									<TextView
										android:id="@+id/visibility_title"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:text="@string/visibility"
										android:textSize="14sp" />
								
								
								</LinearLayout>
							
							
							</LinearLayout>
						
						
						</LinearLayout>
					
					
					</androidx.constraintlayout.widget.ConstraintLayout>
				
				
				</androidx.cardview.widget.CardView>
				
				<!--   astro day info	-->
				<androidx.cardview.widget.CardView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="12dp"
					android:layout_marginTop="12dp"
					android:layout_marginBottom="8dp"
					app:cardBackgroundColor="?colorSecondary"
					app:cardCornerRadius="8dp"
					app:cardElevation="4dp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/forecast_info_layout">
					
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:padding="8dp"
						android:weightSum="2">
						
						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_weight="1"
							android:gravity="center_horizontal"
							android:orientation="vertical">
							
							<ImageView
								android:id="@+id/sun_rise_image"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:src="@drawable/sunrise"
								app:tint="?attr/colorOnPrimary" />
							
							<TextView
								android:id="@+id/sunrise_txt"
								style="@style/simple_text_style"
								android:layout_width="wrap_content"
								android:layout_height="0dp"
								android:layout_weight="1"
								android:gravity="center"
								android:padding="4dp"
								android:textSize="18sp"
								tools:text="12Km/h" />
							
							<TextView
								android:id="@+id/sunrise_title"
								style="@style/simple_text_style"
								android:layout_width="wrap_content"
								android:layout_height="0dp"
								android:layout_weight="1"
								android:gravity="center"
								android:padding="4dp"
								android:text="@string/sunrise"
								android:textSize="14sp" />
						
						
						</LinearLayout>
						
						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_weight="1"
							android:gravity="center_horizontal"
							android:orientation="vertical">
							
							<ImageView
								android:id="@+id/sun_set_image"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:src="@drawable/sunset"
								app:tint="?attr/colorOnPrimary" />
							
							<TextView
								android:id="@+id/sun_set_txt"
								style="@style/simple_text_style"
								android:layout_width="wrap_content"
								android:layout_height="0dp"
								android:layout_weight="1"
								android:gravity="center"
								android:padding="4dp"
								android:textSize="18sp"
								tools:text="12Km/h" />
							
							<TextView
								android:id="@+id/sun_set_title"
								style="@style/simple_text_style"
								android:layout_width="wrap_content"
								android:layout_height="0dp"
								android:layout_weight="1"
								android:gravity="center"
								android:padding="4dp"
								android:text="@string/sunset"
								android:textSize="14sp" />
						
						
						</LinearLayout>
					
					
					</LinearLayout>
				
				
				</androidx.cardview.widget.CardView>
			
			
			</androidx.constraintlayout.widget.ConstraintLayout>
			
			<!--	loading		-->
			<ProgressBar
				android:id="@+id/forecast_progress_bar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:visibility="gone"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />
		
		</androidx.constraintlayout.widget.ConstraintLayout>
	
	
	</androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>