<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="12dp"
	tools:context=".ui.fragments.detail.DetailFragment">
	
	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		
		
		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/main_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			
			
			
			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				
				<!--  action bar	-->
				<RelativeLayout
					android:id="@+id/detail_action_bar_layout"
					android:layout_width="match_parent"
					android:layout_height="?actionBarSize"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					android:background="@drawable/toolbar_shape">
					
					
					<ImageView
						android:id="@+id/detail_back_btn"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentStart="true"
						android:layout_centerVertical="true"
						android:layout_marginStart="12dp"
						android:scaleType="centerCrop"
						android:src="@drawable/baseline_arrow_back_ios_24"
						app:tint="?colorOnPrimary" />
					
					<TextView
						android:id="@+id/detail_action_bar_title"
						style="@style/simple_text_style"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerInParent="true"
						android:textColor="?colorOnPrimary" />
				
				
				</RelativeLayout>
				
				<!--	Main info layout	-->
				<com.google.android.material.card.MaterialCardView
					android:id="@+id/main_info_layout"
					android:layout_width="match_parent"
					android:layout_height="600dp"
					app:cardBackgroundColor="?colorSecondary"
					app:cardCornerRadius="8dp"
					app:cardElevation="4dp"
					android:layout_marginTop="8dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/detail_action_bar_layout">
					
					
					<androidx.constraintlayout.widget.ConstraintLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:padding="8dp">
						
						<ImageView
							android:id="@+id/weather_image"
							android:layout_width="100dp"
							android:layout_height="100dp"
							android:layout_marginTop="40dp"
							android:scaleType="centerCrop"
							app:layout_constraintEnd_toEndOf="parent"
							app:layout_constraintStart_toStartOf="parent"
							app:layout_constraintTop_toTopOf="parent"
							tools:src="@drawable/sunny_day" />
						
						<!--	location layout		-->
						<LinearLayout
							android:id="@+id/location_info_layout"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:gravity="center"
							android:orientation="horizontal"
							app:layout_constraintStart_toStartOf="parent"
							app:layout_constraintTop_toTopOf="parent">
							
							<ImageView
								android:id="@+id/location_image"
								android:layout_width="30dp"
								android:layout_height="30dp"
								android:contentDescription="@string/location_image"
								android:src="@drawable/outline_location_on_24"
								app:tint="?colorOnPrimary" />
							
							<TextView
								android:id="@+id/location_name"
								style="@style/simple_text_style"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								tools:text="Tehran" />
						
						
						</LinearLayout>
						
						<!--	time layout		-->
						<LinearLayout
							android:id="@+id/time_layout"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:gravity="center"
							android:orientation="horizontal"
							app:layout_constraintBottom_toBottomOf="@id/location_info_layout"
							app:layout_constraintEnd_toEndOf="parent"
							app:layout_constraintTop_toTopOf="@id/location_info_layout">
							
							<TextView
								android:id="@+id/time_txt"
								style="@style/simple_text_style"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textSize="18sp"
								tools:text="23:27" />
						
						
						</LinearLayout>
						
						<!--	temperature	layout	-->
						<androidx.constraintlayout.widget.ConstraintLayout
							android:id="@+id/current_temp_layout"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="100dp"
							app:layout_constraintEnd_toEndOf="parent"
							app:layout_constraintStart_toStartOf="parent"
							app:layout_constraintTop_toBottomOf="@id/location_info_layout">
							
							<TextView
								android:id="@+id/current_temp_txt"
								style="@style/simple_text_style"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_margin="12dp"
								android:textSize="60sp"
								app:layout_constraintBottom_toBottomOf="parent"
								app:layout_constraintEnd_toEndOf="parent"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent"
								tools:text="24" />
							
							<ImageView
								android:id="@+id/temp_image"
								android:layout_width="20dp"
								android:layout_height="20dp"
								android:layout_gravity="top"
								android:src="@drawable/outline_circle_24"
								app:layout_constraintEnd_toEndOf="parent"
								app:layout_constraintTop_toTopOf="parent"
								app:tint="?colorOnPrimary" />
						
						
						</androidx.constraintlayout.widget.ConstraintLayout>
						
						<!--	weather info layout		-->
						<LinearLayout
							android:id="@+id/weather_info_layout"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:gravity="center"
							android:orientation="vertical"
							app:layout_constraintEnd_toEndOf="parent"
							app:layout_constraintStart_toStartOf="parent"
							app:layout_constraintTop_toBottomOf="@id/current_temp_layout">
							
							<TextView
								android:id="@+id/weather_situation_txt"
								style="@style/simple_text_style"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textSize="20sp"
								tools:text="Mostly clear" />
							
							<LinearLayout
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginTop="8dp"
								android:gravity="center"
								android:orientation="horizontal"
								android:padding="8dp"
								android:weightSum="3">
								
								<LinearLayout
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="1"
									android:gravity="center"
									android:orientation="vertical"
									android:weightSum="3"
									app:tint="?colorOnPrimary">
									
									<ImageView
										android:id="@+id/wind_speed_image"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:src="@drawable/wind"
										app:tint="?colorOnPrimary" />
									
									
									<TextView
										android:id="@+id/wind_speed_txt"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:textSize="18sp"
										tools:text="12Km/h" />
									
									<TextView
										android:id="@+id/wind_speed_title"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:text="@string/wind"
										android:textSize="14sp" />
								
								
								</LinearLayout>
								
								<LinearLayout
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="1"
									android:gravity="center"
									android:orientation="vertical"
									android:weightSum="3"
									app:tint="?colorOnPrimary">
									
									
									<ImageView
										android:id="@+id/humidity_image"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:src="@drawable/humidity"
										app:tint="?colorOnPrimary" />
									
									<TextView
										android:id="@+id/humidity_txt"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:textSize="18sp"
										tools:text="90%" />
									
									<TextView
										android:id="@+id/humidity_title"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:text="@string/humidity"
										android:textSize="14sp" />
								
								
								</LinearLayout>
								
								<LinearLayout
									android:layout_width="0dp"
									android:layout_height="wrap_content"
									android:layout_weight="1"
									android:gravity="center"
									android:orientation="vertical"
									android:weightSum="3">
									
									<ImageView
										android:id="@+id/wind_direction_image"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:src="@drawable/direction"
										app:tint="?colorOnPrimary" />
									
									
									<TextView
										android:id="@+id/wind_direction_txt"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:textSize="18sp"
										tools:text="NW" />
									
									<TextView
										android:id="@+id/wind_direction_title"
										style="@style/simple_text_style"
										android:layout_width="wrap_content"
										android:layout_height="0dp"
										android:layout_weight="1"
										android:gravity="center"
										android:padding="4dp"
										android:text="@string/wind_direction"
										android:textSize="14sp" />
								
								
								</LinearLayout>
							
							
							</LinearLayout>
						
						
						</LinearLayout>
						
						<!--	weather chart		-->
						<androidx.constraintlayout.widget.ConstraintLayout
							android:layout_width="match_parent"
							android:layout_height="180dp"
							android:background="@drawable/bg_chart"
							android:padding="8dp"
							app:layout_constraintBottom_toBottomOf="parent"
							app:layout_constraintEnd_toEndOf="parent"
							app:layout_constraintStart_toStartOf="parent"
							app:layout_constraintTop_toBottomOf="@id/weather_info_layout">
							
							<TextView
								android:id="@+id/temperature_txt_title"
								style="@style/simple_text_style"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/temperature"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent" />
							
							<com.github.mikephil.charting.charts.LineChart
								android:id="@+id/chart"
								android:layout_width="match_parent"
								android:layout_height="130dp"
								android:layout_marginTop="4dp"
								app:layout_constraintEnd_toEndOf="parent"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toBottomOf="@id/temperature_txt_title" />
						
						
						</androidx.constraintlayout.widget.ConstraintLayout>
					
					
					</androidx.constraintlayout.widget.ConstraintLayout>
				
				
				</com.google.android.material.card.MaterialCardView>
				
				<!--	Rec layout		-->
				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="4dp"
					android:padding="8dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/main_info_layout">
					
					<TextView
						android:id="@+id/today_txt_title"
						style="@style/simple_text_style"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/today"
						android:textSize="18sp"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />
					
					<TextView
						android:id="@+id/next_days_txt_title"
						style="@style/simple_text_style"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/next_3_days"
						android:textSize="16sp"
						android:textStyle="normal"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="parent" />
					
					
					<androidx.recyclerview.widget.RecyclerView
						android:id="@+id/today_rec"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="4dp"
						android:orientation="horizontal"
						app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@id/today_txt_title"
						tools:listitem="@layout/item_weather_forecast" />
				
				
				</androidx.constraintlayout.widget.ConstraintLayout>
				
			</androidx.constraintlayout.widget.ConstraintLayout>
			
			<!--  Loading	-->
			<ProgressBar
				android:id="@+id/detail_progress_bar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:visibility="gone"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />
		
		
		</androidx.constraintlayout.widget.ConstraintLayout>
	
	
	</androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>